# python-project-50

./: .coverage  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: hexlet-check.yml
python_project_scripts/: __init__.py  gendiff.py
python_project_scripts/scripts/: gendiff.py  generate_diff.py
tests/: test_gendiff.py  test_generate_diff.py
