[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['python_project_scripts']

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[project.scripts]
gendiff = 'python_project_scripts.scripts.gendiff:main'

[tool.pytest.ini_options]
addopts = [
    "--cov=python_project_scripts",
    "--cov-report=xml",
    "--cov-report=term-missing",
    "-v"
]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["python_project_scripts"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
]