[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['python_project_scripts']

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]

[project.scripts]
gendiff = 'python_project_scripts.gendiff:main'